# yesblog

./: .envrc  .gitignore  LICENSE  README.md  cabal.project  justfile  package-lock.json  package.json  tailwind.config.js  yesblog.cabal
.clinerules/: Reduce-hallucinations.md  main.md  project-preferences.md
app/: Main.hs
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
nix/modules/flake/: devshell.nix  haskell.nix  pre-commit.nix
sql/: init.sql
src/: ApiType.hs  BeamExample.hs  Fdd.hs  Main.hs  MiniServant.hs  Rel8Example.hs  Rel8Test.hs  Server.hs  SnowflakeExample.hs  StaticFiles.hs
src/Fdd/: Andromeda.hs  Assets.hs  Barometers.hs  Calculations.hs  Common.hs  Hardware.hs  LogicControl.hs  Simulator.hs  Thermometer.hs
src/Fdd/Assets/: DeviceDefinitions.hs  Scripts.hs
src/Fdd/Assets/Vendors/AAA/: Common.hs  Components.hs  ComponentsAPI.hs  HardwareService.hs
src/Fdd/Common/: Physics.hs  Property.hs  Types.hs  Value.hs
src/Fdd/Hardware/: Common.hs  Domain.hs
src/Fdd/Hardware/Impl/: Component.hs  Device.hs  Runtime.hs  Service.hs
src/Fdd/Hardware/Impl/Device/: Types.hs
src/Fdd/Hardware/Impl/Interpreters/: DeviceControl.hs  Hdl.hs
src/Fdd/Hardware/Language/: DeviceControl.hs  Hdl.hs
src/Fdd/LogicControl/: Domain.hs  Language.hs
src/Fdd/LogicControl/Impl/: Interpreter.hs
src/Fdd/LogicControl/Impl/Interpreters/: LogicControl.hs
src/Fdd/Simulator/: Control.hs  Language.hs  Runtime.hs
src/Fdd/Simulator/Hardware/: Device.hs
src/Fdd/Simulator/Hardware/Interpreters/: DeviceControl.hs  Hdl.hs
src/Fdd/Simulator/LogicControl/: Interpreter.hs
src/Hd/Du/: App.hs  AppRWST.hs  AppTypes.hs  DirTree.hs  DiskUsage.hs  FileCounter.hs  Run.hs  Utils.hs
src/Ptld/: Ch01.hs
src/Ys/: Banana.hs  Pitch.hs  WhenDoDsl.hs
src/Ys/Yampa/: Elevator.hs  Simple.hi  Simple.hs  TestElevatorMain.hs
src/Ys/Yampa/Cube/: Graphics.hs  Input.hs  Main.hs  Shapes.hs  Types.hs
static/css/: output.css
test/: StateMonadSpec.hs  StateTMonadSpec.hs
test/Fdd/: HardwareSpec.hs  LogicControlSpec.hs  ScriptsSpec.hs  SimulatorSpec.hs  StatefulScriptsSpec.hs
test/Fdd/Test/: HardwareService.hs
test/Fdd/TestData/: Components.hs  Scripts.hs
test/Ys/: ScriptsSpec.hs
