cabal-version:      2.4
name:               yesblog
version:            0.1.0.0
license:            MIT
copyright:          2022 yesheng
maintainer:         srid@srid.ca
author:             yesheng
category:           Web
homepage:           https://srid.ca/yesblog

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:
-- A URL where users can report bugs.
-- bug-reports:
extra-source-files:
  LICENSE
  README.md

common warnings
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

executable yesblog
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base     >=4 && <5
    , yesblog

  -- Directories containing source files.
  hs-source-dirs:   app

  -- Base language which the package is written in.
  default-language: Haskell2010

library
  import:             warnings
  exposed-modules:
    BeamExample
    Rel8Example
    Server

  other-modules:      ApiType
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    , async
    , attoparsec
    , base                >=4   && <5
    , base-compat
    , beam-core
    , beam-migrate
    , beam-sqlite
    , blaze-html
    , blaze-markup
    , data-default
    , directory
    , filepath
    , hasql
    , http-media
    , lucid
    , mtl
    , optics-core
    , profunctors
    , rel8
    , relude              >=1.0
    , servant
    , servant-lucid
    , servant-server
    , shower
    , sqlite-simple
    , string-conversions
    , text
    , time
    , wai
    , warp
    , with-utf8

  hs-source-dirs:     src
  default-language:   Haskell2010
