cabal-version: 2.4
name: yesblog
version: 0.1.0.0
license: MIT
copyright: 2022 yesheng
maintainer: srid@srid.ca
author: yesheng
category: Web
homepage: https://srid.ca/yesblog
-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis: A template for Haskell projects using Nix
-- A longer description of the package.
-- description:
-- A URL where users can report bugs.
-- bug-reports:
extra-source-files:
  LICENSE
  README.md

common warnings
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wunused-foralls
    -Wunused-foralls
    -fprint-explicit-foralls
    -fprint-explicit-kinds
    -threaded

executable yesblog
  import: warnings
  main-is: Main.hs
  build-depends:
    base >=4.7 && <5,
    yesblog,

  -- Directories containing source files.
  hs-source-dirs: app
  -- Base language which the package is written in.
  default-language: Haskell2010

library
  import: warnings
  exposed-modules:
    Fdd
    Fdd.Andromeda
    Fdd.Assets
    Fdd.Assets.DeviceDefinitions
    Fdd.Assets.Scripts
    Fdd.Assets.Vendors.AAA.Common
    Fdd.Assets.Vendors.AAA.Components
    Fdd.Assets.Vendors.AAA.ComponentsAPI
    Fdd.Assets.Vendors.AAA.HardwareService
    Fdd.Barometers
    Fdd.Calculations
    Fdd.Common
    Fdd.Common.Types
    Fdd.Common.Value
    Fdd.Hardware
    Fdd.Hardware.Common
    Fdd.Hardware.Domain
    Fdd.Hardware.Impl.Component
    Fdd.Hardware.Impl.Device
    Fdd.Hardware.Impl.Device.Types
    Fdd.Hardware.Impl.Runtime
    Fdd.Hardware.Impl.Service
    Fdd.Hardware.Language.DeviceControl
    Fdd.Hardware.Language.Hdl
    Fdd.LogicControl
    Fdd.LogicControl.Domain
    Fdd.LogicControl.Language
    Fdd.Simulator
    Fdd.Simulator.Language
    Fdd.Simulator.Runtime
    Rel8Example
    Server
    SnowflakeExample

  other-modules:
    MiniServant
    StaticFiles

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude,

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    aeson,
    async,
    attoparsec,
    base >=4.7 && <5,
    base-compat,
    blaze-html,
    blaze-markup,
    bytestring,
    data-default,
    directory,
    filepath,
    hasql >=1.8.1.4,
    hasql-pool >=1.2.0.3,
    http-api-data,
    http-media,
    lucid,
    mtl,
    optics-core,
    profunctors,
    rel8,
    relude >=1.0,
    servant,
    servant-lucid,
    servant-server,
    shower,
    snowflake,
    sqlite-simple,
    string-conversions,
    template-haskell,
    text,
    time,
    wai,
    warp,
    with-utf8,

  hs-source-dirs: src
  default-language: Haskell2010

test-suite functional
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Fdd.LogicControlSpec
    Fdd.Test.HardwareService
    Fdd.TestData.Components

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude,

  hs-source-dirs:
    test/

  default-extensions:
    DeriveFunctor
    DeriveGeneric
    ExplicitNamespaces
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    ViewPatterns

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.7 && <5,
    bytestring,
    containers,
    free,
    hspec,
    lens,
    mtl,
    newtype-generics,
    random,
    relude >=1.0,
    scientific,
    template-haskell,
    text,
    time,
    transformers,
    uuid,
    void,
    yesblog,

  default-language: Haskell2010