cabal-version: 2.4
name: yesblog
version: 0.1.0.0
license: MIT
copyright: 2022 yesheng
maintainer: srid@srid.ca
author: yesheng
category: Web
homepage: https://srid.ca/yesblog
-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis: A template for Haskell projects using Nix
-- A longer description of the package.
-- description:
-- A URL where users can report bugs.
-- bug-reports:
extra-source-files:
  LICENSE
  README.md

common warnings
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wunused-foralls
    -Wunused-foralls
    -fprint-explicit-foralls
    -fprint-explicit-kinds
    -threaded

executable yesblog
  import: warnings
  main-is: Main.hs
  build-depends:
    base >=4.7 && <5,
    yesblog,

  -- Directories containing source files.
  hs-source-dirs: app
  -- Base language which the package is written in.
  default-language: Haskell2010

library
  import: warnings
  exposed-modules:
    Fdd
    Fdd.Andromeda
    Fdd.Assets
    Fdd.Assets.DeviceDefinitions
    Fdd.Assets.Vendors.AAA.Common
    Fdd.Assets.Vendors.AAA.Components
    Fdd.Assets.Vendors.AAA.ComponentsAPI
    Fdd.Assets.Vendors.AAA.HardwareService
    Fdd.Barometers
    Fdd.Calculations
    Fdd.Common
    Fdd.Common.Physics
    Fdd.Common.Property
    Fdd.Common.Value
    Fdd.Hardware
    Fdd.Hardware.Common
    Fdd.Hardware.Domain
    Fdd.Hardware.Impl.Component
    Fdd.Hardware.Impl.Device
    Fdd.Hardware.Impl.Device.Types
    Fdd.Hardware.Impl.Interpreters.DeviceControl
    Fdd.Hardware.Impl.Interpreters.Hdl
    Fdd.Hardware.Impl.Runtime
    Fdd.Hardware.Impl.Service
    Fdd.Hardware.Language.DeviceControl
    Fdd.Hardware.Language.Hdl
    Fdd.LogicControl
    Fdd.LogicControl.Domain
    Fdd.LogicControl.Impl.Interpreter
    Fdd.LogicControl.Language
    Fdd.Simulator
    Fdd.Simulator.Control
    Fdd.Simulator.Hardware.Device
    Fdd.Simulator.Hardware.Interpreters.DeviceControl
    Fdd.Simulator.Hardware.Interpreters.Hdl
    Fdd.Simulator.LogicControl.Interpreter
    Fdd.Simulator.Runtime
    Hd.Du.App
    Hd.Du.AppRWST
    Hd.Du.AppTypes
    Hd.Du.DirTree
    Hd.Du.DiskUsage
    Hd.Du.FileCounter
    Hd.Du.Run
    Hd.Du.Utils
    Ptld.Ch01
    Rel8Example
    Server
    SnowflakeExample
    Ys.Banana
    Ys.Pitch
    Ys.WhenDoDsl
    Ys.Yampa.Cube.Graphics
    Ys.Yampa.Cube.Input
    Ys.Yampa.Cube.Main
    Ys.Yampa.Cube.Shapes
    Ys.Yampa.Cube.Types
    Ys.Yampa.Elevator
    Ys.Yampa.Simple
    Ys.Yampa.TestElevatorMain

  other-modules:
    MiniServant
    StaticFiles

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude,

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    StateVar,
    Yampa,
    aeson,
    async,
    attoparsec,
    base >=4.7 && <5,
    base-compat,
    blaze-html,
    blaze-markup,
    bytestring,
    colour,
    containers,
    data-default,
    directory,
    extra,
    filepath,
    free,
    hasql >=1.8.1.4,
    hasql-pool >=1.2.0.3,
    http-api-data,
    http-media,
    linear,
    lucid,
    mtl,
    optics-core,
    optparse-applicative,
    process,
    profunctors,
    random,
    reactive-banana,
    rel8,
    relude >=1.0,
    sdl2,
    servant,
    servant-lucid,
    servant-server,
    shower,
    snowflake,
    sqlite-simple,
    string-conversions,
    template-haskell,
    text,
    text-show,
    time,
    unix-compat,
    vector,
    wai,
    warp,
    with-utf8,

  hs-source-dirs: src
  default-language: Haskell2010

test-suite functional
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Fdd.HardwareSpec
    Fdd.LogicControlSpec
    Fdd.ScriptsSpec
    Fdd.SimulatorSpec
    Fdd.StatefulScriptsSpec
    Fdd.Test.HardwareService
    Fdd.TestData.Components
    Fdd.TestData.Scripts
    StateMonadSpec
    StateTMonadSpec
    Ys.ScriptsSpec

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude,

  hs-source-dirs:
    test/

  default-extensions:
    DeriveFunctor
    DeriveGeneric
    ExplicitNamespaces
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    ViewPatterns

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.7 && <5,
    bytestring,
    containers,
    free,
    hspec,
    lens,
    mtl,
    newtype-generics,
    random,
    relude >=1.0,
    scientific,
    template-haskell,
    text,
    time,
    transformers,
    uuid,
    void,
    yesblog,

  default-language: Haskell2010
